# passport_ocr

./: CMakeLists.txt  test.cpp
demo/: push.bat  push.sh  runner
include/: common.h  dict.h  pp_ocr.h  preprocess.h
model/: ch_ppocr_mobile_v1.1_cls_opt.nb  ch_ppocr_mobile_v1.1_cls_quant_opt.nb  ch_ppocr_mobile_v1.1_det_prune_opt.nb
src/: dict.cpp  ocr_db_post_process.cpp  ocr_ppredictor.cpp  pp_ocr.cpp  predictor_input.cpp  preprocess.cpp
